--- a/.github/workflows/test-build-deploy.yaml
+++ b/.github/workflows/test-build-deploy.yaml
@@ -41,6 +41,7 @@ jobs:
   # to the container registry.
   build:
     name: build
+    needs: test
     runs-on: ubuntu-latest
     environment: petal-test
     steps:
@@ -61,6 +62,7 @@ jobs:
   # deployments.
   deploy:
     name: deploy
+    needs: build
     runs-on: ubuntu-latest
     environment: petal-test
     steps:
